--- a/css/timelify.css
+++ b/css/timelify.css
@@ -91,39 +91,21 @@
     left: calc(100% + 10.4%);
 }
 
-.timeline .timeline-items .timeline-item:nth-of-type(2n+1) {
+.timeline .timeline-items .timeline-item {
     background-color: #00acc1;
     color: white;
 }
 
-.timeline .timeline-items .timeline-item:nth-of-type(2n+1) hr {
+.timeline .timeline-items .timeline-item hr {
     border-top: 1px solid #00c3db;
 }
 
-.timeline .timeline-items .timeline-item:nth-of-type(2n+1) a {
+.timeline .timeline-items .timeline-item a {
     color: #1759a2;
 }
 
-.timeline .timeline-items .timeline-item:nth-of-type(2n+1)::before {
+.timeline .timeline-items .timeline-item::before {
     border-top: 1em solid #00acc1;
-    border-right: 1em solid transparent;
-}
-
-.timeline .timeline-items .timeline-item:nth-of-type(2n) {
-    background-color: #e57373;
-    color: white;
-}
-
-.timeline .timeline-items .timeline-item:nth-of-type(2n) hr {
-    border-top: 1px solid #e98989;
-}
-
-.timeline .timeline-items .timeline-item:nth-of-type(2n) a {
-    color: #601010;
-}
-
-.timeline .timeline-items .timeline-item:nth-of-type(2n)::before {
-    border-top: 1em solid #e57373;
     border-right: 1em solid transparent;
 }
 
@@ -153,41 +135,20 @@
     left: calc(-8.78% - 13px);
 }
 
-
-
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n+1) {
-    background-color: #00acc1;
-    color: white;
-}
-
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n+1) hr {
-    border-top: 1px solid #00c3db;
-}
-
-
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n+1) a {
-    color: #1759a2;
-}
-
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n+1)::before {
-    border-top: 1em solid #00acc1;
-    border-left: 1em solid transparent;
-}
-
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n) {
+.timeline .timeline-items .timeline-item.inverted {
     background-color: #e57373;
     color: white;
 }
 
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n) hr {
+.timeline .timeline-items .timeline-item.inverted hr {
     border-top: 1px solid #e98989;
 }
 
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n) a {
+.timeline .timeline-items .timeline-item.inverted a {
     color: #601010;
 }
 
-.timeline .timeline-items .timeline-item.inverted:nth-of-type(2n)::before {
+.timeline .timeline-items .timeline-item.inverted::before {
     border-top: 1em solid #e57373;
     border-left: 1em solid transparent;
 }
@@ -211,42 +172,22 @@
     display: none;
 }
 
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n+1) {
-    background-color: #00acc1;
-    color: white;
-}
 
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n+1) hr {
-    border-top: 1px solid #00c3db;
-}
-
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n+1) a {
-    color: #1759a2;
-}
-
-
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n+1)::before {
-    border-top: 0;
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 1em solid #00acc1;
-}
-
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n) {
+.timeline .timeline-items .timeline-item.centered {
     background-color: #e57373;
     color: white;
 }
 
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n) hr {
+.timeline .timeline-items .timeline-item.centered hr {
     border-top: 1px solid #e98989;
 }
 
 
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n) a {
+.timeline .timeline-items .timeline-item.centered a {
     color: #601010;
 }
 
-.timeline .timeline-items .timeline-item.centered:nth-of-type(2n)::before {
+.timeline .timeline-items .timeline-item.centered::before {
     border-top: 0;
     border-left: 1em solid transparent;
     border-right: 1em solid transparent;
